# monorepo

./: .dockerignore  .env.postgres.example  .pre-commit-config.yaml  .trivyignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  architecture_overrides.json  artana.toml  artana_state.db-shm  artana_state.db-wal  datasources_architecture.md  extract.py  flujo.toml  flujo_state.db-shm  flujo_state.db-wal  latest_proposal_amy_feedback.md  latest_proposal_integration_plan.md  med13.db.failed_20260213_153240  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS
.github/workflows/: deploy.yml  frontdoor-deploy.yml  graph-service-deploy.yml
alembic/: env.py
alembic/versions/: 001_current_baseline.py  001_kernel_schema.py  002_add_clinvar_source_types.py  002_reasoning_paths.py  003_add_source_sync_tracking.py  004_relation_evidence_and_extraction_queue_contract.py  005_rel_evidence_rollout_marker.py  006_extraction_queue_payload_refs.py  007_add_source_documents_mvp.py  008_add_postgres_scheduler_tables.py  009_dictionary_provenance_review.py  010_dictionary_changelog.py  011_dictionary_type_tables.py  012_dictionary_value_sets.py  013_dictionary_embeddings.py  014_dictionary_versioning_validity.py  015_dictionary_transforms_upgrade.py  016_enable_kernel_rls.py  017_phi_identifier_encryption.py  018_extraction_queue_created_at.py  019_create_reviews_table.py  020_ingestion_job_runtime_fields.py  021_add_page_load_perf_indexes.py  022_run_ids_as_text.py  023_enforce_active_synonym_uniqueness.py  024_claim_first_orchestration.py  025_graph_dictionary_hard_guarantees.py  026_concept_manager_foundation.py  027_relation_evidence_sentence.py  028_relation_evidence_sentence_provenance.py  029_relation_claim_semantics.py  030_claim_evidence_table.py  031_entity_embeddings_hybrid.py  032_claim_graph_overlay.py  033_overlay_updated_at_columns.py  034_claim_participants_entity_fk_restrict.py  035_session_token_uniqueness.py  036_pipeline_job_kind.py  037_pipeline_run_events.py  038_pipeline_run_event_audit_columns.py  (+2 more)
apps/frontdoor/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  jest.config.js  next.config.js  package-lock.json  package.json  tsconfig.json
docs/: EngineeringArchitecture.md  README.md  plan.md  project_status.md  source_workflow_monitor_and_pipeline_trace.md  sourcedoc.md  statement_promotion_rules.md  system_map.md
docs/Homepage/: frontdoor_website_prd.md
docs/adr/: 0004-graph-runtime-naming-and-product-boundary.md  0005-graph-core-and-domain-pack-packaging.md  0006-graph-read-model-ownership-and-truth-boundaries.md
docs/frontend/: EngineeringArchitectureNext.md
docs/graph/: README.md  architecture.md  endpoints.md  examples.md  use-cases.md
docs/harness/: aims.md  brainstorm.md  plan.md  progress.md
docs/latest_plan_path/: datasources_architecture.md  flow_example.md  pubmed_to_graph_memory_orchestration.md
docs/old/: infra.md
docs/onboarding/: architecture-overview.md  artana-bio-gcp-cost-snapshot-2026-03-06.md  user-roles-and-access.md
docs/proposal/: graph.md  proposal.md
docs/security/: PYTHON_DEPENDENCY_VULNERABILITIES.md
docs/status/: AI_MANAGED_DATA_SOURCES_STATUS.md
scripts/: _graph_service_client_support.py  backfill_phi_identifiers.py  check_claim_projection_readiness.py  check_no_any.py  export_graph_harness_openapi.py  export_graph_openapi.py  generate_ts_types.py  init_artana_schema.py  rebuild_graph_read_model_entity_claim_summary.py  rebuild_graph_read_model_entity_mechanism_paths.py  rebuild_graph_read_model_entity_neighbors.py  rebuild_graph_read_model_entity_relation_summary.py  rebuild_reasoning_paths.py  report_relation_status_normalization.py  run_focused_flujo_relation_test.py  run_isolated_postgres_tests.py  run_minimal_full_workflow.py  run_qa_report.sh  run_single_paper_med13_report.py  run_three_paper_med13_report.py  sync_graph_spaces.py  test_pubmed_fulltext_download.py  validate_architecture.py  validate_dependencies.py  validate_graph_phase1_alias_policy.py  validate_graph_phase2_boundary.py  validate_graph_phase3_invariants.py  validate_graph_phase4_read_models.py  validate_graph_phase6_release_contract.py  validate_graph_phase7_cross_domain.py  validate_graph_service_boundary.py
scripts/deploy/: rollout_staging_queued_workers.sh  sync_cloud_run_runtime_config.sh  sync_graph_cloud_run_runtime_config.sh  validate_shared_instance_graph_topology.py
scripts/fixtures/: focused_relation_sample.txt
scripts/postgres-init/: 01-create-artana-schema.sql
scripts/validation/: __init__.py  evaluate_gold_relations.py  expected_results_article_2.md  gold_synthetic_1.json  gold_synthetic_2.json  synthetic_article_1.txt  synthetic_article_2.txt
services/: __init__.py
services/graph_api/: Dockerfile  README.md  __init__.py  __main__.py  _claim_paper_links.py  _claim_relation_normalization.py  _dictionary_relation_types.py  _graph_document_support.py  _relation_evidence_presenter.py  _relation_subgraph_helpers.py  alembic.ini  app.py  auth.py  composition.py  concept_repository.py  config.py  database.py  dependencies.py  dictionary_repository.py  dictionary_search.py  governance.py  graph_document_builder.py  main.py  manage.py  openapi.json  operation_runs.py  requirements-dev.txt  requirements.txt
services/graph_harness_api/: Dockerfile  README.md  __init__.py  __main__.py  app.py  approval_store.py  artana_stores.py  artifact_store.py  auth.py  chat_graph_write_models.py  chat_graph_write_workflow.py  chat_literature.py  chat_sessions.py  chat_workflow.py  claim_curation_runtime.py  claim_curation_workflow.py  composition.py  config.py  continuous_learning_runtime.py  dependencies.py  graph_chat_runtime.py  graph_client.py  graph_connection_runtime.py  graph_search_runtime.py  graph_snapshot.py  harness_registry.py  harness_runtime.py  main.py  mechanism_discovery_runtime.py  openapi.json  policy.py  ranking.py  (+19 more)
src/: main.py
tests/: conftest.py  db_reset.py  graph_harness_api_support.py  graph_seed_helpers.py  graph_service_support.py  sqlite_utils.py
(+1568 files in other folders)
