[build-system]
requires = [ "setuptools>=61.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "med13-resource-library"
version = "0.1.0"
description = "MED13 Resource Library - Curated biomedical data for research"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "fastapi>=0.115.0", "uvicorn[standard]>=0.30.0", "pydantic>=2.8.0", "pydantic-settings>=2.3.0", "sqlalchemy>=2.0.0", "psycopg2-binary>=2.9.0", "asyncpg>=0.29.0", "alembic>=1.13.0", "google-cloud-secret-manager>=2.16.0", "google-cloud-storage>=2.10.0", "httpx>=0.27.0", "pandas>=2.2.0", "numpy>=1.26.0", "gradio>=4.44.1", "redis>=5.0.0", "artana @ git+https://github.com/aandresalvarez/artana-kernel.git@main", "pydantic-ai==1.25.1", "griffe<2", "bcrypt>=4.1.0", "cryptography>=46.0.5", "jsonschema>=4.20.0", "aiohttp>=3.10.0", "anyio>=4.0.0", "requests>=2.30.0", "PyJWT>=2.8.0", "filelock>=3.20.3", "pyasn1>=0.6.2", "python-multipart>=0.0.22", "protobuf>=6.33.5", "pillow>=12.1.1", "greenlet", "psutil",]
[[project.authors]]
name = "MED13 Foundation"

[project.optional-dependencies]
dev = [ "pytest>=8.0.0", "pytest-asyncio>=0.23.0", "pytest-cov>=5.0.0", "black>=24.0.0", "flake8>=7.0.0", "ruff>=0.11.10,<0.12.0", "mypy>=1.8.0", "types-defusedxml", "types-PyYAML", "pre-commit>=3.7.0", "pip-audit>=2.7.0", "bandit>=1.8.0", "safety>=3.0.0", "jaraco.context>=6.1.0", "pytest-watch>=4.2.0", "pytest-xdist>=3.6.0", "hypothesis>=6.112.1", "schemathesis>=3.24.6", "virtualenv>=20.36.1",]

[tool.black]
line-length = 88
target-version = [ "py313",]
include = "\\.pyi?$"
extend-exclude = "/(\n  # directories\n  \\.eggs\n  | \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | _build\n  | buck-out\n  | build\n  | dist\n)/\n"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_any_expr = false
[[tool.mypy.overrides]]
module = [ "alembic.*", "requests.*", "requests",]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [ "src.type_definitions.json_utils", "src.application.packaging.*",]
disallow_any_expr = false

[[tool.mypy.overrides]]
module = [ "src.domain.events.*", "src.domain.entities.*", "src.type_definitions.domain",]
disallow_any_expr = true

[[tool.mypy.overrides]]
module = [ "artana", "artana.*",]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [ "src.infrastructure.llm.adapters.*",]
disallow_any_unimported = false


[tool.flake8]
max-line-length = 88
extend-ignore = [ "E203", "W503", "E501",]
exclude = [ ".git", "__pycache__", "build", "dist", "*.egg-info", ".venv", ".tox", "migrations", "src/web/node_modules",]
per-file-ignores = [
  "scripts/*.py:E402",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.bandit]
exclude_dirs = [ "tests", "migrations", ".venv",]
skips = [ "B101", "B601", "B405", "B106",]

[tool.safety]
ignore-vulns = []

[tool.ruff.lint]
select = [ "E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG",]
ignore = [ "E203", "E501", "W291", "W292", "W293",]

[tool.safety.scan]

[tool.coverage.run]
source = [ "src",]
omit = [ "*/tests/*", "*/test_*.py", "src/main.py",]

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", "def __repr__", "if self.debug:", "if settings.DEBUG", "raise AssertionError", "raise NotImplementedError", "if 0:", "if __name__ == .__main__.:", "class .*\\bProtocol\\):", "@(abc\\.)?abstractmethod",]

[tool.ruff.lint.per-file-ignores]
"src/web/**" = [ "T20", "ARG", "ERA",]
"scripts/**" = [ "E402", "S107", "TRY400", "PLC0415", "BLE001", "C901", "PLR0911", "T201",]
"tests/**" = [ "S101", "ARG", "ERA", "PLR2004", "SLF001", "E402", "S106", "PT011", "B017", "N806", "PLC0415", "PTH123", "EM102", "TRY003", "S105", "INP001", "B007", "PERF102", "RET504", "PTH110", "SIM222", "PLR0913", "PT003", "TRY002", "BLE001", "B023", "S603",]
"src/routes/**" = [ "B008", "BLE001", "B904", "TRY300", "RET504", "ARG001", "PLR0913", "FBT001", "FBT003", "TRY301", "SLF001", "C901", "S106", "TC001", "TC002", "TC003",]
"src/domain/transform/**" = [ "TID252", "C901", "PLR0911", "PLR0912", "PLR2004", "BLE001", "T201", "ERA001", "TRY003", "EM101", "EM102", "SIM102", "PLC0415", "PERF401", "ARG002", "RET504", "SIM105", "DTZ007", "DTZ001", "N817", "PLC0105", "FBT001", "FBT002", "TRY300", "TRY400", "G004", "SLF001", "TC003", "PLC0206",]
"src/domain/validation/**" = [ "TID", "TC001", "TC002", "TC003", "C901", "FBT001", "FBT002", "PERF401", "SIM118", "A002", "UP007", "PLR0913", "PLR2004", "TRY003", "EM102", "SLF001", "PLC0415", "PLR0912",]
